[package]
name = "raqm-sys"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
description = "sys bindings for libraqm"
keywords = ["binding"]
license = "MIT"
repository = "https://github.com/mersinvald/raqm-sys"
build = "build.rs"

[build-dependencies]
bindgen = "0.37.0"
cc = "1.0.17"

