[package]
name = "raqm-sys"
version = "0.3.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
description = "sys bindings for libraqm"
keywords = ["binding"]
license = "MIT"
repository = "https://github.com/mersinvald/raqm-sys"
build = "build.rs"

[dependencies]
freetype-sys = "0.7"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.37.0"
cc = "1.0.17"
